# comp_hair_head

./: .gitignore  README.md  pyproject.toml  requirements.txt
comp_hair_head/: __init__.py  config.py
comp_hair_head/dynamics/: __init__.py  cage_builder.py  collision.py  hair_deform.py  mvc.py  pbd_solver.py
comp_hair_head/flame/: __init__.py  flame_model.py  rigging.py
comp_hair_head/gaussian/: __init__.py  model.py  renderer.py
comp_hair_head/pipeline/: __init__.py  animate.py  reconstruct.py  transfer.py
comp_hair_head/preprocessing/: __init__.py  bald_filter.py  face_lift.py  flame_fitting.py
comp_hair_head/registration/: __init__.py  assembly.py
comp_hair_head/segmentation/: __init__.py  boundary_reassign.py  hair_seg.py  learnable_feat.py
comp_hair_head/utils/: geometry.py  io.py  logging.py
configs/: default.yaml  quick_test.yaml
scripts/: convert_flame.py  demo.py
tests/: test_config.py  test_gaussian.py  test_geometry.py  test_pbd.py
